# ccbs

./: .gitignore  .gitmodules  CMakeLists.txt  ccbs_pkg.ccbs.hpp
include/ccbs/: ccbs.hpp
include/ccbs/compiler/: compiler.hpp  compiler_ptr.hpp  gcc.hpp
include/ccbs/dirs/: options.hpp
include/ccbs/package/: cmake_find_package.hpp  cmake_package.hpp  installed_package.hpp  package.hpp  package_flags.hpp  pkg_config_package.hpp
include/ccbs/rule/: dependency_rule.hpp  rule.hpp  ruleset.hpp
include/ccbs/util/: category.hpp  containers.hpp  parallel.hpp  polymorphic_value.hpp
lib/dirs/: pragmas.cpp
lib/package/: cmake_find_package.cpp  cmake_package.cpp  package_flags.cpp
lib/rule/: dependency_rule.cpp  rule.cpp  ruleset.cpp
lib/util/: find_utils.cpp  parallel.cpp
program/: CMakeLists.txt  debug.cpp  main.cpp
